--- a/CollegeTouring/login.ui
+++ b/CollegeTouring/login.ui
@@ -6,50 +6,53 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>341</width>
-    <height>107</height>
+    <width>387</width>
+    <height>228</height>
    </rect>
   </property>
   <property name="windowTitle">
    <string>Form</string>
   </property>
-  <widget class="QLineEdit" name="lineEdit">
+  <widget class="QLineEdit" name="entryPassword">
    <property name="geometry">
     <rect>
-     <x>50</x>
-     <y>40</y>
-     <width>141</width>
-     <height>22</height>
+     <x>100</x>
+     <y>80</y>
+     <width>241</width>
+     <height>28</height>
     </rect>
    </property>
    <property name="echoMode">
     <enum>QLineEdit::Password</enum>
    </property>
   </widget>
-  <widget class="QPushButton" name="pushButton">
-   <property name="geometry">
-    <rect>
-     <x>210</x>
-     <y>40</y>
-     <width>75</width>
-     <height>24</height>
-    </rect>
-   </property>
-   <property name="text">
-    <string>Enter</string>
-   </property>
-  </widget>
   <widget class="QLabel" name="label">
    <property name="geometry">
     <rect>
-     <x>40</x>
-     <y>70</y>
-     <width>191</width>
-     <height>16</height>
+     <x>30</x>
+     <y>80</y>
+     <width>101</width>
+     <height>20</height>
     </rect>
    </property>
    <property name="text">
-    <string>no password, just click enter</string>
+    <string>Password</string>
+   </property>
+  </widget>
+  <widget class="QDialogButtonBox" name="buttonBox">
+   <property name="geometry">
+    <rect>
+     <x>0</x>
+     <y>130</y>
+     <width>341</width>
+     <height>32</height>
+    </rect>
+   </property>
+   <property name="orientation">
+    <enum>Qt::Horizontal</enum>
+   </property>
+   <property name="standardButtons">
+    <set>QDialogButtonBox::Cancel|QDialogButtonBox::Ok</set>
    </property>
   </widget>
  </widget>
